src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) void KalmanFilter_transitionMatrix_set(void* self, void* val);
extern "C" __declspec(dllexport) void* KalmanFilter_controlMatrix_get(void* self);
extern "C" __declspec(dllexport) void KalmanFilter_controlMatrix_set(void* self, void* val);
extern "C" __declspec(dllexport) void* KalmanFilter_measurementMatrix_get(void* self);
extern "C" __declspec(dllexport) void KalmanFilter_measurementMatrix_set(void* self, void* val);
extern "C" __declspec(dllexport) void* KalmanFilter_processNoiseCov_get(void* self);
extern "C" __declspec(dllexport) void KalmanFilter_processNoiseCov_set(void* self, void* val);
extern "C" __declspec(dllexport) void* KalmanFilter_measurementNoiseCov_get(void* self);
extern "C" __declspec(dllexport) void KalmanFilter_measurementNoiseCov_set(void* self, void* val);
extern "C" __declspec(dllexport) void* KalmanFilter_errorCovPre_get(void* self);
extern "C" __declspec(dllexport) void KalmanFilter_errorCovPre_set(void* self, void* val);
extern "C" __declspec(dllexport) void* KalmanFilter_gain_get(void* self);
extern "C" __declspec(dllexport) void KalmanFilter_gain_set(void* self, void* val);
extern "C" __declspec(dllexport) void* KalmanFilter_errorCovPost_get(void* self);
extern "C" __declspec(dllexport) void KalmanFilter_errorCovPost_set(void* self, void* val);
extern "C" __declspec(dllexport) void SparseOpticalFlow_Delete(void* self);
extern "C" __declspec(dllexport) void SparseOpticalFlow_calc_0(void* self, void* prevImg, void* nextImg, void* prevPts, void* nextPts, void* status, void* err);
extern "C" __declspec(dllexport) void SparsePyrLKOpticalFlow_Delete(void* self);
extern "C" __declspec(dllexport) cv::Size SparsePyrLKOpticalFlow_getWinSize_0(void* self);
extern "C" __declspec(dllexport) void SparsePyrLKOpticalFlow_setWinSize_0(void* self, cv::Size winSize);
extern "C" __declspec(dllexport) int SparsePyrLKOpticalFlow_getMaxLevel_0(void* self);
extern "C" __declspec(dllexport) void SparsePyrLKOpticalFlow_setMaxLevel_0(void* self, int maxLevel);
extern "C" __declspec(dllexport) cv::TermCriteria SparsePyrLKOpticalFlow_getTermCriteria_0(void* self);
extern "C" __declspec(dllexport) void SparsePyrLKOpticalFlow_setTermCriteria_0(void* self, cv::TermCriteria crit);
extern "C" __declspec(dllexport) int SparsePyrLKOpticalFlow_getFlags_0(void* self);
extern "C" __declspec(dllexport) void SparsePyrLKOpticalFlow_setFlags_0(void* self, int flags);
extern "C" __declspec(dllexport) double SparsePyrLKOpticalFlow_getMinEigThreshold_0(void* self);
extern "C" __declspec(dllexport) void SparsePyrLKOpticalFlow_setMinEigThreshold_0(void* self, double minEigThreshold);
extern "C" __declspec(dllexport) void* SparsePyrLKOpticalFlow_create_0(cv::Size winSize, int maxLevel, cv::TermCriteria crit, int flags, double minEigThreshold);
extern "C" __declspec(dllexport) void Tracker_Delete(void* self);
extern "C" __declspec(dllexport) void Tracker_init_0(void* self, void* image, cv::Rect boundingBox);
extern "C" __declspec(dllexport) bool Tracker_update_0(void* self, void* image, cv::Rect boundingBox);
extern "C" __declspec(dllexport) float Tracker_getTrackingScore_0(void* self);
extern "C" __declspec(dllexport) void TrackerDaSiamRPN_Delete(void* self);
extern "C" __declspec(dllexport) void* TrackerDaSiamRPN_create_0(void* parameters);
extern "C" __declspec(dllexport) void TrackerDaSiamRPN_Params_Delete(void* self);
extern "C" __declspec(dllexport) void* TrackerDaSiamRPN_Params_New_0();
extern "C" __declspec(dllexport) const char* TrackerDaSiamRPN_Params_model_get(void* self);
extern "C" __declspec(dllexport) void TrackerDaSiamRPN_Params_model_set(void* self, const char* val);
extern "C" __declspec(dllexport) const char* TrackerDaSiamRPN_Params_kernel_cls1_get(void* self);
extern "C" __declspec(dllexport) void TrackerDaSiamRPN_Params_kernel_cls1_set(void* self, const char* val);
extern "C" __declspec(dllexport) const char* TrackerDaSiamRPN_Params_kernel_r1_get(void* self);
extern "C" __declspec(dllexport) void TrackerDaSiamRPN_Params_kernel_r1_set(void* self, const char* val);
extern "C" __declspec(dllexport) int TrackerDaSiamRPN_Params_backend_get(void* self);
extern "C" __declspec(dllexport) void TrackerDaSiamRPN_Params_backend_set(void* self, int val);
extern "C" __declspec(dllexport) int TrackerDaSiamRPN_Params_target_get(void* self);
extern "C" __declspec(dllexport) void TrackerDaSiamRPN_Params_target_set(void* self, int val);
extern "C" __declspec(dllexport) void TrackerMIL_Delete(void* self);
extern "C" __declspec(dllexport) void* TrackerMIL_create_0(void* parameters);
extern "C" __declspec(dllexport) void TrackerMIL_Params_Delete(void* self);
extern "C" __declspec(dllexport) void* TrackerMIL_Params_New_0();
extern "C" __declspec(dllexport) float TrackerMIL_Params_samplerInitInRadius_get(void* self);
extern "C" __declspec(dllexport) void TrackerMIL_Params_samplerInitInRadius_set(void* self, float val);
extern "C" __declspec(dllexport) int TrackerMIL_Params_samplerInitMaxNegNum_get(void* self);
extern "C" __declspec(dllexport) void TrackerMIL_Params_samplerInitMaxNegNum_set(void* self, int val);
extern "C" __declspec(dllexport) float TrackerMIL_Params_samplerSearchWinSize_get(void* self);
extern "C" __declspec(dllexport) void TrackerMIL_Params_samplerSearchWinSize_set(void* self, float val);
extern "C" __declspec(dllexport) float TrackerMIL_Params_samplerTrackInRadius_get(void* self);
extern "C" __declspec(dllexport) void TrackerMIL_Params_samplerTrackInRadius_set(void* self, float val);
extern "C" __declspec(dllexport) int TrackerMIL_Params_samplerTrackMaxPosNum_get(void* self);
extern "C" __declspec(dllexport) void TrackerMIL_Params_samplerTrackMaxPosNum_set(void* self, int val);