src/OpenCV5Sharp/Generated/NativeMethods.Video.cs

        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void KalmanFilter_transitionMatrix_set(KalmanFilterHandle self, IntPtr val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr KalmanFilter_controlMatrix_get(KalmanFilterHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void KalmanFilter_controlMatrix_set(KalmanFilterHandle self, IntPtr val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr KalmanFilter_measurementMatrix_get(KalmanFilterHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void KalmanFilter_measurementMatrix_set(KalmanFilterHandle self, IntPtr val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr KalmanFilter_processNoiseCov_get(KalmanFilterHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void KalmanFilter_processNoiseCov_set(KalmanFilterHandle self, IntPtr val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr KalmanFilter_measurementNoiseCov_get(KalmanFilterHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void KalmanFilter_measurementNoiseCov_set(KalmanFilterHandle self, IntPtr val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr KalmanFilter_errorCovPre_get(KalmanFilterHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void KalmanFilter_errorCovPre_set(KalmanFilterHandle self, IntPtr val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr KalmanFilter_gain_get(KalmanFilterHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void KalmanFilter_gain_set(KalmanFilterHandle self, IntPtr val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr KalmanFilter_errorCovPost_get(KalmanFilterHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void KalmanFilter_errorCovPost_set(KalmanFilterHandle self, IntPtr val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SparseOpticalFlow_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SparseOpticalFlow_calc_0(SparseOpticalFlowHandle self, MatHandle prevImg, MatHandle nextImg, MatHandle prevPts, MatHandle nextPts, MatHandle status, IntPtr err);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SparsePyrLKOpticalFlow_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Size SparsePyrLKOpticalFlow_getWinSize_0(SparsePyrLKOpticalFlowHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SparsePyrLKOpticalFlow_setWinSize_0(SparsePyrLKOpticalFlowHandle self, Size winSize);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int SparsePyrLKOpticalFlow_getMaxLevel_0(SparsePyrLKOpticalFlowHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SparsePyrLKOpticalFlow_setMaxLevel_0(SparsePyrLKOpticalFlowHandle self, int maxLevel);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern TermCriteria SparsePyrLKOpticalFlow_getTermCriteria_0(SparsePyrLKOpticalFlowHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SparsePyrLKOpticalFlow_setTermCriteria_0(SparsePyrLKOpticalFlowHandle self, TermCriteria crit);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int SparsePyrLKOpticalFlow_getFlags_0(SparsePyrLKOpticalFlowHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SparsePyrLKOpticalFlow_setFlags_0(SparsePyrLKOpticalFlowHandle self, int flags);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double SparsePyrLKOpticalFlow_getMinEigThreshold_0(SparsePyrLKOpticalFlowHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SparsePyrLKOpticalFlow_setMinEigThreshold_0(SparsePyrLKOpticalFlowHandle self, double minEigThreshold);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr SparsePyrLKOpticalFlow_create_0(Size winSize, int maxLevel, TermCriteria crit, int flags, double minEigThreshold);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Tracker_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Tracker_init_0(TrackerHandle self, MatHandle image, Rect boundingBox);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool Tracker_update_0(TrackerHandle self, MatHandle image, Rect boundingBox);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float Tracker_getTrackingScore_0(TrackerHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TrackerDaSiamRPN_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr TrackerDaSiamRPN_create_0(IntPtr parameters);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TrackerDaSiamRPN_Params_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr TrackerDaSiamRPN_Params_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr TrackerDaSiamRPN_Params_model_get(TrackerDaSiamRPNParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TrackerDaSiamRPN_Params_model_set(TrackerDaSiamRPNParamsHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr TrackerDaSiamRPN_Params_kernel_cls1_get(TrackerDaSiamRPNParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TrackerDaSiamRPN_Params_kernel_cls1_set(TrackerDaSiamRPNParamsHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr TrackerDaSiamRPN_Params_kernel_r1_get(TrackerDaSiamRPNParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TrackerDaSiamRPN_Params_kernel_r1_set(TrackerDaSiamRPNParamsHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int TrackerDaSiamRPN_Params_backend_get(TrackerDaSiamRPNParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TrackerDaSiamRPN_Params_backend_set(TrackerDaSiamRPNParamsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int TrackerDaSiamRPN_Params_target_get(TrackerDaSiamRPNParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TrackerDaSiamRPN_Params_target_set(TrackerDaSiamRPNParamsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TrackerMIL_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr TrackerMIL_create_0(IntPtr parameters);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TrackerMIL_Params_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr TrackerMIL_Params_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float TrackerMIL_Params_samplerInitInRadius_get(TrackerMILParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TrackerMIL_Params_samplerInitInRadius_set(TrackerMILParamsHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int TrackerMIL_Params_samplerInitMaxNegNum_get(TrackerMILParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TrackerMIL_Params_samplerInitMaxNegNum_set(TrackerMILParamsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float TrackerMIL_Params_samplerSearchWinSize_get(TrackerMILParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TrackerMIL_Params_samplerSearchWinSize_set(TrackerMILParamsHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float TrackerMIL_Params_samplerTrackInRadius_get(TrackerMILParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TrackerMIL_Params_samplerTrackInRadius_set(TrackerMILParamsHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int TrackerMIL_Params_samplerTrackMaxPosNum_get(TrackerMILParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void TrackerMIL_Params_samplerTrackMaxPosNum_set(TrackerMILParamsHandle self, int val);
